Fixes issue with word wrapping on off canvas, and accompanying design changes
Design for off canvas dropdowns had to be modified a bit to accommodate the correct word-wrapping with long labels

--- a/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
+++ b/app/assets/stylesheets/omni_nav/omni_nav_v2/off-canvas-nav.scss
@@ -227,18 +227,18 @@
           > li {
             background-color: $white;
             list-style: none;
-            display: block;
+            display: table;
             border-bottom: 1px solid $cu-off-canvas-nav-border;
             position: relative;
             width: 100%;
             margin: 0;
+            min-height: 46px;
 
             > ul {
               display: none;
               background-color: $cu-off-canvas-nav-background;
 
               > li {
-                border-top: 1px solid $cu-off-canvas-nav-border-secondary;
                 margin: 0;
 
                 > a {
@@ -271,14 +271,14 @@
             }
 
             > a, .toggle {
-              height: 46px;
+              min-height: 46px;
             }
 
             > a {
               color: $cu-off-canvas-nav-text;
-              padding: 0px 50px 0px 18px;
+              padding: 18px 50px 18px 18px;
               position: relative;
-              display: table-cell;
+              display: block;
               @include transition(all, 0.175s, ease-in-out);
               vertical-align: middle;
               font-size: 16px;
@@ -291,13 +291,14 @@
 
             .toggle {
               background-color: $cu-off-canvas-nav-background;
+              padding-top: 18px;
               width: 46px;
-              line-height: 45px;
               text-align: center;
               position: absolute;
               cursor: pointer;
               top: 0;
               right: 0;
+              bottom: 0;
 
               span {
                 display: block;
@@ -334,7 +335,6 @@
               display: none;
 
               > li {
-                border-top: 1px solid $cu-off-canvas-nav-border-secondary;
                 margin: 0;
 
                 > a {
